[gd_scene load_steps=23 format=3 uid="uid://dd7mfrhiqo5cv"]

[ext_resource type="Texture2D" uid="uid://c6oal6e8glhi5" path="res://assets/main/puzzle/critter/mole-sheet.png" id="1"]
[ext_resource type="Texture2D" uid="uid://doms2tnxed20o" path="res://assets/main/puzzle/critter/critter-wait-sheet.png" id="2"]
[ext_resource type="PackedScene" path="res://src/main/utils/CritterPoof.tscn" id="3"]
[ext_resource type="Script" path="res://src/main/puzzle/critter/mole.gd" id="4"]
[ext_resource type="Script" path="res://src/main/puzzle/critter/mole-state-found-seed.gd" id="5"]
[ext_resource type="Script" path="res://src/main/utils/state-machine.gd" id="6"]
[ext_resource type="Script" path="res://src/main/puzzle/critter/mole-state-none.gd" id="7"]
[ext_resource type="Script" path="res://src/main/puzzle/critter/mole-state-waiting.gd" id="8"]
[ext_resource type="Script" path="res://src/main/puzzle/critter/mole-state-digging.gd" id="9"]
[ext_resource type="Script" path="res://src/main/puzzle/critter/mole-state-digging-end.gd" id="10"]
[ext_resource type="Script" path="res://src/main/puzzle/critter/mole-state-found-star.gd" id="11"]
[ext_resource type="Script" path="res://src/main/puzzle/critter/mole-sfx.gd" id="12"]
[ext_resource type="AudioStream" uid="uid://dw25cs6mv17vx" path="res://assets/main/puzzle/critter/critter-poof.wav" id="13"]
[ext_resource type="AudioStream" uid="uid://d1u6mx6jk2yuk" path="res://assets/main/puzzle/critter/mole-dig.wav" id="14"]
[ext_resource type="AudioStream" uid="uid://6dnb5pd4c1we" path="res://assets/main/puzzle/critter/mole-found.wav" id="15"]

[sub_resource type="Animation" id="1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Mole:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Mole:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WaitLow:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WaitHigh:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("WaitHigh:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("WaitLow:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}

[sub_resource type="Animation" id="2"]
resource_name = "dig"
length = 4.0
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Mole:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75, 2, 2.25, 2.5, 2.75, 3, 3.25, 3.5, 3.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Mole:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WaitLow:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WaitHigh:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("WaitHigh:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75, 2, 2.25, 2.5, 2.75, 3, 3.25, 3.5, 3.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 3, 1, 2, 0, 2, 3, 1, 2, 0, 3, 1, 0, 3, 2, 1]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("MoleSfx")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75, 2, 2.25, 2.5, 2.75, 3, 3.25, 3.5, 3.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"values": [{
"args": [],
"method": &"play_dig_sound"
}, {
"args": [],
"method": &"play_dig_sound"
}, {
"args": [],
"method": &"play_dig_sound"
}, {
"args": [],
"method": &"play_dig_sound"
}, {
"args": [],
"method": &"play_dig_sound"
}, {
"args": [],
"method": &"play_dig_sound"
}, {
"args": [],
"method": &"play_dig_sound"
}, {
"args": [],
"method": &"play_dig_sound"
}, {
"args": [],
"method": &"play_dig_sound"
}, {
"args": [],
"method": &"play_dig_sound"
}, {
"args": [],
"method": &"play_dig_sound"
}, {
"args": [],
"method": &"play_dig_sound"
}, {
"args": [],
"method": &"play_dig_sound"
}, {
"args": [],
"method": &"play_dig_sound"
}, {
"args": [],
"method": &"play_dig_sound"
}, {
"args": [],
"method": &"play_dig_sound"
}]
}

[sub_resource type="Animation" id="5"]
resource_name = "dig-end"
length = 4.0
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Mole:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75, 2, 2.25, 2.5, 2.75, 3, 3.25, 3.5, 3.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Mole:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WaitLow:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WaitHigh:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("WaitHigh:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75, 2, 2.25, 2.5, 2.75, 3, 3.25, 3.5, 3.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [4, 7, 5, 6, 4, 6, 7, 5, 6, 4, 7, 5, 4, 7, 6, 5]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("MoleSfx")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75, 2, 2.25, 2.5, 2.75, 3, 3.25, 3.5, 3.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"values": [{
"args": [],
"method": &"play_dig_sound"
}, {
"args": [],
"method": &"play_dig_sound"
}, {
"args": [],
"method": &"play_dig_sound"
}, {
"args": [],
"method": &"play_dig_sound"
}, {
"args": [],
"method": &"play_dig_sound"
}, {
"args": [],
"method": &"play_dig_sound"
}, {
"args": [],
"method": &"play_dig_sound"
}, {
"args": [],
"method": &"play_dig_sound"
}, {
"args": [],
"method": &"play_dig_sound"
}, {
"args": [],
"method": &"play_dig_sound"
}, {
"args": [],
"method": &"play_dig_sound"
}, {
"args": [],
"method": &"play_dig_sound"
}, {
"args": [],
"method": &"play_dig_sound"
}, {
"args": [],
"method": &"play_dig_sound"
}, {
"args": [],
"method": &"play_dig_sound"
}, {
"args": [],
"method": &"play_dig_sound"
}]
}

[sub_resource type="Animation" id="3"]
resource_name = "found-seed"
length = 2.0
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Mole:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WaitLow:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WaitHigh:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Mole:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 6, 7, 6, 7, 6, 7]
}

[sub_resource type="Animation" id="6"]
resource_name = "found-star"
length = 2.0
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Mole:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WaitLow:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WaitHigh:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Mole:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [4, 5, 4, 5, 4, 5, 4, 5]
}

[sub_resource type="Animation" id="4"]
resource_name = "wait"
length = 3.0
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WaitLow:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Mole:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WaitHigh:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WaitLow:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75, 2, 2.25, 2.5, 2.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 2, 1, 3, 0, 3, 2, 0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kpjvn"]
_data = {
"RESET": SubResource("1"),
"dig": SubResource("2"),
"dig-end": SubResource("5"),
"found-seed": SubResource("3"),
"found-star": SubResource("6"),
"wait": SubResource("4")
}

[node name="Mole" type="Node2D"]
script = ExtResource("4")

[node name="Mole" type="Sprite2D" parent="."]
position = Vector2(0, -35)
texture = ExtResource("1")
hframes = 4
vframes = 2

[node name="WaitLow" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2")
hframes = 4
vframes = 2

[node name="WaitHigh" type="Sprite2D" parent="."]
position = Vector2(0, -64)
texture = ExtResource("2")
hframes = 4
vframes = 2

[node name="Poof" parent="." instance=ExtResource("3")]

[node name="States" type="Node" parent="."]
script = ExtResource("6")

[node name="None" type="Node" parent="States"]
script = ExtResource("7")

[node name="Waiting" type="Node" parent="States"]
script = ExtResource("8")

[node name="Digging" type="Node" parent="States"]
script = ExtResource("9")

[node name="DiggingEnd" type="Node" parent="States"]
script = ExtResource("10")

[node name="FoundSeed" type="Node" parent="States"]
script = ExtResource("5")

[node name="FoundStar" type="Node" parent="States"]
script = ExtResource("11")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kpjvn")
}

[node name="MoleSfx" type="Node" parent="."]
script = ExtResource("12")

[node name="Poof" type="AudioStreamPlayer" parent="MoleSfx"]
stream = ExtResource("13")
volume_db = -4.0

[node name="Dig0" type="AudioStreamPlayer" parent="MoleSfx"]
stream = ExtResource("14")

[node name="Dig1" type="AudioStreamPlayer" parent="MoleSfx"]
stream = ExtResource("14")

[node name="Found" type="AudioStreamPlayer" parent="MoleSfx"]
stream = ExtResource("15")
volume_db = -4.0

[connection signal="animation_finished" from="Poof" to="." method="_on_Poof_animation_finished"]
